// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should analyze absolute-import-path 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "details": "got 2 errors:
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/asset/image/1659821.jpeg - Failed to load resource: the server responded with a status of 404 (Not Found)
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/asset/script.js - Failed to load resource: the server responded with a status of 404 (Not Found)",
      "result": "failed",
    },
    "game_no_external_http": Object {
      "details": "got 2 forbidden requests:
- /asset/image/1659821.jpeg Can you try importing this resource with a relative path ?
- /asset/script.js Can you try importing this resource with a relative path ?",
      "result": "failed",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/bd1602a1362d694cc6b9ddf4c5207244/index.html",
}
`;

exports[`should analyze blank-screen 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "failed",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/40ee652d2122d448f64b309c58a6b6f8/index.html",
}
`;

exports[`should analyze error-on-run 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "details": "got 2 errors:
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/dca252fad75e913a541ca5673481c867/asset/script.js 7:10 Uncaught Error: something bad
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/dca252fad75e913a541ca5673481c867/asset/script.js 7:10 Uncaught Error: something bad",
      "result": "failed",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/dca252fad75e913a541ca5673481c867/index.html",
}
`;

exports[`should analyze external-http-call-html 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "details": "got 2 forbidden requests:
- https://avatars0.githubusercontent.com/u/1659820?v=4
- https://github.com/platane.png",
      "result": "failed",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/696cdb41bf18ff816639e11aa50ad364/index.html",
}
`;

exports[`should analyze index-not-in-root 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "details": "Can you try moving \\"game/index.html\\" to the root of the zip ?",
      "result": "failed",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "untested",
    },
    "game_no_error": Object {
      "result": "untested",
    },
    "game_no_external_http": Object {
      "result": "untested",
    },
  },
  "deployUrl": null,
}
`;

exports[`should analyze missing-index 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "details": "Can you try renaming \\"game.html\\" to \\"index.html\\" ?",
      "result": "failed",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "untested",
    },
    "game_no_error": Object {
      "result": "untested",
    },
    "game_no_external_http": Object {
      "result": "untested",
    },
  },
  "deployUrl": null,
}
`;

exports[`should analyze oversize-bundle 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "failed",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/5855708fa624653a763da490406581d6/index.html",
}
`;

exports[`should analyze valid 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/5e081c6c24ce7be528b5b876b21c3521/index.html",
}
`;

exports[`should analyze valid-whitelisted-external 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/7edd45b6ad71be8feb0ff6a43a13a0f8/index.html",
}
`;
